# astrolabe

./: .gitignore  .gitmodules  Astrolabe.sln  CLAUDE.md  README.md  debug_gf.cs  plan.md  pyproject.toml  test_textured_export.csx
.claude/: settings.local.json
docs/: ARCHITECTURE.md  ai-script-format.md  cnt-format.md  file-format-catalogue.md  file-formats.md  geometry-format.md  gf-format.md  lighting.md  perso-mesh-animation.md  relocation-tables.md  sna-format.md
docs/formats/: AI.md  DSB.md  ENCRYPTION.md  GEOMETRY.md  GF.md  LVL.md  README.md  RELOCATION.md  SNA.md  SUPEROBJECT.md
scripts/: analyze_rtb.py  analyze_structure.py  check_alpha.py  explore_sna.py  extract_direct.py  extract_meshes.py  extract_test.py  extract_textures.py  extract_with_rtb.py  find_geometry.py  find_vertices.py  scan_geometry.py
src/Astrolabe.Cli/: Astrolabe.Cli.csproj  Program.cs
src/Astrolabe.Cli/Commands/: AnalyzeCommand.cs  AudioCommand.cs  CntCommand.cs  DebugGfCommand.cs  DebugNamesCommand.cs  DebugSnaCommand.cs  ExportFamiliesCommand.cs  ExportGltfCommand.cs  ExportGodotCommand.cs  ExtractAllCommand.cs  ExtractCommand.cs  ListCommand.cs  MeshesCommand.cs  SceneCommand.cs  ScriptsCommand.cs  TexturesCommand.cs  TexturesSnaCommand.cs
src/Astrolabe.Core/: Astrolabe.Core.csproj
src/Astrolabe.Core/Extraction/: DirectoryGameSource.cs  GameSourceFactory.cs  IGameSource.cs  IsoExtractor.cs  IsoGameSource.cs
src/Astrolabe.Core/FileFormats/: CntReader.cs  GfReader.cs  GptReader.cs  LevelLoader.cs  MemoryContext.cs  ObjectTypeReader.cs  RelocationTableReader.cs  SceneGraph.cs  SnaReader.cs  SuperObjectReader.cs  TextureTable.cs
src/Astrolabe.Core/FileFormats/AI/: AITypes.cs  SExpressionConverter.cs  SExpressionConverterTests.cs  Script.cs  ScriptNode.cs
src/Astrolabe.Core/FileFormats/Animation/: AnimationReader.cs  AnimationTypes.cs  FamilyReader.cs
src/Astrolabe.Core/FileFormats/Audio/: ApmDecoder.cs  ApmReader.cs  BnmReader.cs  IAudioDecoder.cs  ImaAdpcmDecoder.cs  PcmDecoder.cs  UbiMpegDecoder.cs  WavWriter.cs
src/Astrolabe.Core/FileFormats/Geometry/: FamilyExporter.cs  GeometricObjectReader.cs  GltfExporter.cs  MeshScanner.cs
src/Astrolabe.Core/FileFormats/Godot/: GodotExporter.cs
src/Astrolabe.Core/FileFormats/Materials/: CollideMaterial.cs  GameMaterial.cs  VisualMaterial.cs
src/astrolabe/: __init__.py  cli.py
src/astrolabe/converters/: __init__.py  gltf_export.py
src/astrolabe/godot/: __init__.py
src/astrolabe/iso/: __init__.py  extractor.py
src/astrolabe/openspace/: __init__.py  datareader.py  encryption.py  geometry.py  lzo.py  pointer.py  relocation.py  sna.py
tests/: __init__.py  test_sna.py
tools/: render_gltf.py
