[project]
name = "astrolabe"
version = "0.1.0"
description = "Extract and convert Hype: The Time Quest game data for Godot"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Astrolabe Contributors" }
]
keywords = ["hype", "time-quest", "godot", "game-modding", "openspace"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "pycdlib>=1.14.0",  # ISO reading
    "click>=8.0",       # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
astrolabe = "astrolabe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astrolabe"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
